@@ -3,11 +3,13 @@ Section: number_fields
 C-Name: polcompositum0
 Prototype: GGD0,L,
 Help: polcompositum(P,Q,{flag=0}): vector of all possible compositums
- of the number fields defined by the polynomials P and Q. If (optional)
- flag is set (i.e non-null), output for each compositum, not only the
- compositum polynomial pol, but a vector [R,a,b,k] where a (resp. b) is a root
- of P (resp. Q) expressed as a polynomial modulo R,
- and a small integer k such that al2+k*al1 is the chosen root of R.
+ of the number fields defined by the polynomials P and Q; flag is
+ optional, whose binary digits mean 1: output for each compositum, not only
+ the compositum polynomial pol, but a vector [R,a,b,k] where a (resp. b) is a
+ root of P (resp. Q) expressed as a polynomial modulo R, and a small integer k
+ such that al2+k*al1 is the chosen root of R; 2: assume that the number
+ fields defined by P and Q are linearly disjoint.
+
 Doc: \sidx{compositum} $P$ and $Q$
  being squarefree polynomials in $\Z[X]$ in the same variable, outputs
  the simple factors of the \'etale $\Q$-algebra $A = \Q(X, Y) / (P(X), Q(Y))$.
@@ -20,7 +22,8 @@ Doc: \sidx{compositum} $P$ and $Q$
  irreducible first. The routine will not perform this for you, since it may be
  expensive, and the inputs are irreducible in most applications anyway. In
  this case, there will be a single factor $R$ if and only if the number
- fields defined by $P$ and $Q$ are disjoint.
+ fields defined by $P$ and $Q$ are linearly disjoint (their intersection is
+ $\Q$).
 
  Assuming $P$ is irreducible (of smaller degree than $Q$ for efficiency), it
  is in general much faster to proceed as follows
@@ -32,11 +35,18 @@ Doc: \sidx{compositum} $P$ and $Q$
  simple factors, the \kbd{rnfequation} instruction can be replaced by a
  trivial \kbd{poldegree(P) * poldegree(L[i])}.
 
- If $\fl=1$, outputs a vector of 4-component vectors $[R,a,b,k]$, where $R$
+ The binary digits of $\fl$ mean
+
+ 1: outputs a vector of 4-component vectors $[R,a,b,k]$, where $R$
  ranges through the list of all possible compositums as above, and $a$
  (resp. $b$) expresses the root of $P$ (resp. $Q$) as an element of
  $\Q(X)/(R)$. Finally, $k$ is a small integer such that $b + ka = X$ modulo
  $R$.
+
+ 2: assume that $P$ and $Q$ define number fields which are linearly disjoint:
+ both polynomials are irreducible and the corresponding number fields
+ have no common subfield besides $\Q$. This allows to save a costly
+ factorization over $\Q$.
 
  A compositum is often defined by a complicated polynomial, which it is
  advisable to reduce before further work. Here is an example involving
@@ -61,6 +71,11 @@ Doc: \sidx{compositum} $P$ and $Q$
  %8 = Mod(1/11*x^14 + 29/11*x^4, x^20 + 25*x^10 + 5)
  ? a^5 - 5
  %9 = 0
+ @eprog\noindent In the above example, $x^5-5$ and the $5$-th cyclotomic
+ polynomial are irreducible over $\Q$; they have coprime degrees so
+ define linearly disjoint extensions and we could have started by
+ \bprog
+ ? L = polcompositum(x^5 - 5, polcyclo(5), 1); \\@com list of $[R,a,b,k]$
  @eprog
 Variant: Also available are
  \fun{GEN}{compositum}{GEN P, GEN Q} ($\fl = 0$) and
