@@ -411,4 +411,6 @@ Mod(1, 3)
 Mod(0, 2)
 [-x + 1, 1, 1]
 x^4 + 2*y*x^2 + y^2
-Total time spent: 6416
+[x^20 - 10*x^16 + 20*x^15 + 40*x^12 + 2600*x^11 + 150*x^10 - 80*x^8 + 12400*
+x^7 - 17000*x^6 + 500*x^5 + 80*x^4 + 5600*x^3 + 11000*x^2 + 5000*x + 593]
+Total time spent: 6100
