@@ -79,3 +79,5 @@ norm(Mod(Pol(Mod(0,2)), 3*x))
 polresultantext(x+1, x^2)
 \\#1614
 polresultant(1+x*z^2,1+y*z^4,z)
+
+polcompositum(x^5-5,x^4-2,2)
